--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"bootstrap-icons": "^1.13.1",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
+		"react-big-calendar": "^1.19.4",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.18.0",
 		"three": "^0.180.0"
